--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,8 +9,9 @@
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/db/migrate.ts",
-    "dev": "tsx src/index.ts",
-    "db:seed": "tsx src/db/seed.ts"
+    "dev": "tsx watch src/index.ts",
+    "db:seed": "tsx src/db/seed.ts",
+    "dev:hot": "tsx watch src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,11 +29,15 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/session": "^11.1.0",
+    "@types/lodash": "^4.17.17",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.3.3",
+    "lodash": "^4.17.21",
     "pg": "^8.16.0",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2",
     "zod": "^3.25.56"
   }
 }
