--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/db/migrate.ts",
@@ -38,6 +39,7 @@
     "pg": "^8.16.0",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.4.2",
+    "rimraf": "^6.0.1",
     "zod": "^3.25.56"
   }
 }
