--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "habits-mvp",
 	"private": true,
 	"version": "1.0.0",
+	"homepage": "https://cheg-a.github.io/habits-demo",
 	"workspaces": [
 		"apps/*",
 		"packages/*"
@@ -9,10 +10,12 @@
 	"scripts": {
 		"dev:frontend": "pnpm --filter frontend dev",
 		"dev:backend": "pnpm --filter backend dev",
-		"dev": "concurrently -n frontend,backend -c green,blue \"pnpm dev:frontend\" \"pnpm dev:backend\""
+		"dev": "concurrently -n frontend,backend -c green,blue \"pnpm dev:frontend\" \"pnpm dev:backend\"",
+		"deploy": "cd apps/frontend && pnpm build && gh-pages -d dist"
 	},
 	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
 	"devDependencies": {
-		"concurrently": "^9.1.2"
+		"concurrently": "^9.1.2",
+		"gh-pages": "^6.3.0"
 	}
 }
