--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,6 +35,8 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.3.3",
+    "@fastify/multipart": "^7.0.0",
+    "@fastify/static": "^7.0.1",
     "lodash": "^4.17.21",
     "pg": "^8.16.0",
     "prettier": "^3.5.3",
