--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,14 +29,14 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "9.0.3",
     "@fastify/session": "^11.1.0",
+    "@fastify/static": "8.2.0",
     "@types/lodash": "^4.17.17",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "fastify": "^5.3.3",
-    "@fastify/multipart": "^7.0.0",
-    "@fastify/static": "^7.0.1",
+    "fastify": "5.3.3",
     "lodash": "^4.17.21",
     "pg": "^8.16.0",
     "prettier": "^3.5.3",
